# Facial_Details_Synthesis

./: .gitmodules  LICENSE  README.md
released/: facialDetails.py  proxyPredictor.py
released/DFDN/: areas.mat
released/DFDN/models/: pix2pix_model.py
released/DFDN/options/: testsingle_options.py
released/emotion/checkpoints/: large.json
released/faceRender/shaders/: lattice.frag  lattice.vs  ph_backmann.frag  ph_backmann.vs  render_bssrdf.frag  render_bssrdf.vs  render_gauss_convolv_u.frag  render_gauss_convolv_u.vs  render_gauss_convolv_v.frag  render_hm.frag  render_hm.vs  render_irridance.frag  render_irridance.vs  render_irridance_sh.frag  render_irridance_sh.vs  shadow_map.frag  shadow_map.vs  stretch.frag  stretch.vs
released/renderTexture/: OBJRender_project.frag  header.h
src/: facialDetails.py  proxyPredictor.py
src/DFDN/models/: base_model.py  models.py  networks.py
src/DFDN/options/: base_options.py  testsingle_options.py
src/emotionNet/: fertrainImgLarge.py
src/landmarkDetecter/exe/FaceLandmarkImg/: FaceLandmarkImg.vcxproj  main.cpp
src/landmarkDetecter/lib/local/FaceAnalyser/AU_predictors/: AU_all_best.txt  DISFA_dynamic_svms.txt  DISFA_static_svms.txt
src/landmarkDetecter/lib/local/FaceAnalyser/include/: FaceAnalyserParameters.h
src/landmarkDetecter/lib/local/LandmarkDetector/: LandmarkDetector.vcxproj  LandmarkDetector.vcxproj.filters
src/landmarkDetecter/lib/local/LandmarkDetector/include/: CCNF_patch_expert.h  CNN_utils.h  LandmarkCoreIncludes.h  LandmarkDetectorFunc.h
src/landmarkDetecter/lib/local/LandmarkDetector/model/: clm_general.txt  early_term_cen_of.txt  main_clnf_demos.txt  main_clnf_general.txt  main_clnf_multi_pie.txt
src/landmarkDetecter/lib/local/LandmarkDetector/src/: CCNF_patch_expert.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorUtils.cpp  PAW.cpp  Patch_experts.cpp  SVR_patch_expert.cpp  stdafx.cpp
src/landmarkDetecter/lib/local/Utilities/include/: ConcurrentQueue.h  ImageManipulationHelpers.h  SequenceCapture.h
src/landmarkDetecter/lib/local/Utilities/src/: VisualizationUtils.cpp
src/landmarkDetector/: OpenFace.sln  download_models.ps1
src/landmarkDetector/lib/local/FaceAnalyser/: CMakeLists.txt  FaceAnalyser.vcxproj
src/landmarkDetector/lib/local/FaceAnalyser/AU_predictors/: AU_DISFA_best.txt  AU_DISFA_static.txt  main_dynamic_svms.txt  main_static_svms.txt
src/landmarkDetector/lib/local/FaceAnalyser/include/: FaceAnalyser.h  SVM_dynamic_lin.h  SVR_dynamic_lin_regressors.h  stdafx_fa.h
src/landmarkDetector/lib/local/FaceAnalyser/src/: FaceAnalyser.cpp  Face_utils.cpp  SVM_dynamic_lin.cpp  SVM_static_lin.cpp  SVR_dynamic_lin_regressors.cpp  SVR_static_lin_regressors.cpp  stdafx_fa.cpp
src/landmarkDetector/lib/local/LandmarkDetector/: CMakeLists.txt
src/landmarkDetector/lib/local/LandmarkDetector/include/: CEN_patch_expert.h  FaceDetectorMTCNN.h  LandmarkDetectorModel.h  PAW.h  PDM.h  Patch_experts.h  SVR_patch_expert.h  stdafx.h
src/landmarkDetector/lib/local/LandmarkDetector/model/: clnf_general.txt  clnf_wild.txt  haarAlign.txt  main_ceclm_general.txt  main_clnf_wild.txt  tris_68.txt  tris_68_full.txt
src/landmarkDetector/lib/local/LandmarkDetector/model/detection_validation/: validator_general_68.txt
src/landmarkDetector/lib/local/LandmarkDetector/model/model_eye/: clnf_left_synth.txt  clnf_right_synth.txt  main_clnf_synth_left.txt
src/landmarkDetector/lib/local/LandmarkDetector/model/model_eye/patch_experts/: left_ccnf_patches_1.50_synth_lid_.txt
src/landmarkDetector/lib/local/LandmarkDetector/model/model_inner/: clnf_inner.txt  main_clnf_inner.txt
src/landmarkDetector/lib/local/LandmarkDetector/model/model_inner/pdms/: pdm_51_inner.txt
src/landmarkDetector/lib/local/LandmarkDetector/model/patch_experts/: ccnf_patches_0.25_wild.txt  ccnf_patches_0.35_general.txt  ccnf_patches_0.35_multi_pie.txt  ccnf_patches_0.35_wild.txt  ccnf_patches_0.5_wild.txt  ccnf_patches_1_wild.txt  svr_patches_0.35_general.txt  svr_patches_0.35_wild.txt  svr_patches_0.5_general.txt
src/landmarkDetector/lib/local/LandmarkDetector/src/: CEN_patch_expert.cpp  CNN_utils.cpp  FaceDetectorMTCNN.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorParameters.cpp  PDM.cpp
src/landmarkDetector/lib/local/Utilities/: Utilities.vcxproj.filters
src/landmarkDetector/lib/local/Utilities/include/: ImageCapture.h  RecorderCSV.h  RecorderHOG.h  RecorderOpenFace.h  RecorderOpenFaceParameters.h  RotationHelpers.h  VisualizationUtils.h  Visualizer.h  stdafx_ut.h
src/landmarkDetector/lib/local/Utilities/src/: ImageCapture.cpp  RecorderCSV.cpp  RecorderOpenFace.cpp  RecorderOpenFaceParameters.cpp  Visualizer.cpp  stdafx_ut.cpp
src/landmarks/: download_libraries.ps1  download_models.ps1
src/landmarks/lib/local/FaceAnalyser/: FaceAnalyser.vcxproj.filters
src/landmarks/lib/local/FaceAnalyser/AU_predictors/: AU_all_static.txt  In-the-wild_aligned_PDM_68.txt
src/landmarks/lib/local/FaceAnalyser/include/: Face_utils.h  SVM_static_lin.h  SVR_static_lin_regressors.h
src/landmarks/lib/local/FaceAnalyser/src/: FaceAnalyserParameters.cpp
src/landmarks/lib/local/LandmarkDetector/include/: LandmarkDetectionValidator.h  (+2 more)
src/landmarks/lib/local/Utilities/: CMakeLists.txt  Utilities.vcxproj
src/landmarks/lib/local/Utilities/src/: RecorderHOG.cpp  SequenceCapture.cpp
src/renderTexture/: faceClip.sln
src/renderTexture/faceClip/: OBJRender_normal.frag  OBJRender_project.vs  faceClip.vcxproj.filters  node.h
src/textureRender/faceClip/: OBJRender.vs  OBJRender_unfold.frag  face.cpp  faceClip.vcxproj
src/textureRender/src/: CMakeLists.txt  face.cpp
src/textureRender/src/includes/: ECRenderCamView.cpp  ECRenderCamView.h  Matrices.h  OBJRender.cpp  OBJRender.h  shader.h  stb_image_resize.h  stb_image_write.h  tinyobj.cpp  tinyobj.h  util.h
src/textureRender/src/shaders/: OBJRender.vs  OBJRender_depth.frag  OBJRender_depth.vs  OBJRender_posiction.frag  OBJRender_project.vs  OBJRender_unfold.frag
src/textureRender/thirds/GLAD/lib/: glad.lib
src/textureRender/thirds/glfw3/lib/: glfw3.lib
(+30 files in other folders)
